# Proyecto_IA_Clasificador_SAM_3

./: .gitignore  .gitmodules
Prompts/: Claude_Troubleshooting.odt  Gemini_3_troubleshotting.odt  HojaRuta_Fase0.odt  HojaRuta_Fase0_Revisada.odt  HojaRuta_Fase1.odt  P1_Requisitos.txt  Repo_Estructura.txt  STARTUP.txt
Proyecto_IA/: .env.example  .gitignore  LICENSE  README.md
Proyecto_IA/apps/backend/: .env.example  pyproject.toml  requirements.txt  setup.py
Proyecto_IA/apps/backend/data/: app.db
Proyecto_IA/apps/backend/src/: __init__.py  main.py
Proyecto_IA/apps/backend/src/api/: concepts.py  datasets.py  debug.py  health.py  images.py  jobs.py  logs.py
Proyecto_IA/apps/backend/src/core/: __init__.py  config.py  database.py  logging_config.py  models.py  schemas.py  utils.py
Proyecto_IA/apps/backend/src/data/: app.db
Proyecto_IA/apps/backend/src/datasets/: __init__.py  service.py
Proyecto_IA/apps/backend/src/inference/: __init__.py  sam3_methods.py  sam3_runner.py
Proyecto_IA/apps/backend/src/jobs/: manager.py
Proyecto_IA/apps/backend/src/proyecto_ia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Proyecto_IA/apps/backend/src/stats/: __init__.py  buckets.py
Proyecto_IA/apps/backend/tests/: .gitkeep
Proyecto_IA/data/: app.db
Proyecto_IA/docs/: setup.md
Proyecto_IA/frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Proyecto_IA/output/: system_status.json
Proyecto_IA/scripts/: download_sam3_weights.py  run_app.bat  run_app.ps1  (+4 more)
(+60 files in other folders)
